# deer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bibtex/: 8dab8dc7-25b2-4b91-8f71-2d806d988610.bib  bc683f5d-c031-4f11-9b8a-337ef4d08a89.bib  eb152f34-9901-4d02-86b4-326ef8b0cf39.bib
deer/: add.py  cli.py  main.py  utils.py
deer/bibtex/: db.py  entry.py  record.py
tests/: test_author_validation_regex.py
