[tool.poetry]
name = "deer"
version = "0.1.0"
description = "a simple tool to manage papers, .bib files and notes"
authors = ["Philipp Schroeppel <69214052+pns1123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
typer = "^0.9.0"
gitpython = "^3.1.40"
bibtexparser = {git = "https://github.com/sciunto-org/python-bibtexparser.git"}
pydantic = "^2.4.2"
polars = "^0.19.13"
pre-commit = "^3.5.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
